--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body, html {
+    background-color:#a5857f;
     min-height:100vh;
     margin:0;
 }
 
 .navFlexBox {
-    background-color:grey;
+    background-color:#a5857f;
     display:flex;
     flex-direction:row;
     list-style-type:none;
@@ -16,32 +17,32 @@ body, html {
     text-decoration:none;
     font-size:15pt;
 }
+
 .access {
     margin-left:auto;
 }
 
 .navBarSplit {
     margin-left:auto;
+
 }
 
 #categories {
     border-color: transparent;
     font-size:13pt;
-    background-color:grey;
+    background-color:#a5857f;
+    color:#faa307;
+}
+a {
+    color:#faa307;
 }
 nav a:visited {
-    color:black;
+    color:#faa307;
 }
 nav a:active {
     color:red;
 }
 
-nav a:hover {
-    background-color:red;
-}
-#categories:hover {
-    background-color:red;
-}
 
 #ecommercePhoto {
     max-width:100%;
@@ -57,42 +58,38 @@ h1 {
 }
 
 #favoritesFlexBox {
+    color:#144aa6;
     display:flex;
     justify-content:space-around;
 }
 
 
 table {
+    color:#faa307;
+    background-color:white;
     Width:30%;
     border-collapse:collapse;
     text-align:center;
     font-size:15pt;
     font-weight:bold;
 }
+table h2 {
+    color:#144aa6;
+}
 
 th, td {
-    border:5px dashed orange;
+    border:1px solid black;
     
 }
 
 
 /* Below is signin sheet****** */
-/* 
 
-.form {
-    border:1px solid red;
-    width:20%;
-    
-}
-input,lable {
-    margin:auto;
-    display:block;
-    margin-bottom:2%;
-} */
 .form input {
     display:block;
 }
 .form {
+    color:#faa307;
     display:flex;
     min-height:100vh;
     justify-content:center;
@@ -101,23 +98,86 @@ input,lable {
     
 }
 .fancyBox {
-    background-color:grey;
+    background-color:#faa307;
     display:flex;
     justify-content:center;
     align-items:center;
     width:30%;
-    height:40vh;
-    padding:5%;
+    height:30%;
+    padding:10%;
     border-radius:10%;
-    
 }
 form {
     border-radius:5%;
     background-color:white;
-    padding:10%;
+    padding:20%;
     display:flex;
     flex-direction:column;
 }
-form inputs {
-    margin-bottom:1%;
+
+
+.icon {
+    margin:auto;
+    position:relative;
+    top:10px;
+    left:5px;
+    display:inline;
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+  }
+
+  @media all and (min-width:820px) {
+    nav a:hover {
+        background-color:red;
+    }
+    #categories:hover {
+        background-color:red;
+    }
 }
+    @media screen and (max-width: 820px) {
+        #favoritesFlexBox, .navFlexBox {   
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+        }
+        .navBarSplit, .access {
+            margin:auto;
+        }
+    }
+
+        /* Footer transitions */
+        
+        footer {
+            text-align:center;
+        }
+        footer:hover {
+            transform:translatex(-300px);
+    
+        }
+        .footerContent {
+            color:#faa307;
+            transition-property: color;
+      
+        }
+        .footerContent:hover {
+            color:#144aa6;
+            transition-delay:3s;
+            transition-duration:5s;
+        }
+
+        .name {
+            color: #faa307;
+            transition-property:font-size, color;
+
+        }
+        .name:hover {
+            transform:translate(50px);
+            color:#144aa6;
+            font-size:20pt;
+            transition-delay:3s;
+            transition-duration:5s;
+        }
+
